--- a/T3grupoJavaULP/src/t3grupojavaulp/Vistas/GestionAlumnosView.form
+++ b/T3grupoJavaULP/src/t3grupojavaulp/Vistas/GestionAlumnosView.form
@@ -43,14 +43,14 @@
                       <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" attributes="0">
-                              <Group type="103" groupAlignment="0" attributes="0">
+                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                   <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-                                  <Component id="jdFechaNacimiento" min="-2" pref="173" max="-2" attributes="0"/>
                                   <Component id="jbEstado" min="-2" max="-2" attributes="0"/>
-                                  <Component id="jtNombre" alignment="0" min="-2" pref="132" max="-2" attributes="0"/>
-                                  <Component id="jtApellido" min="-2" pref="132" max="-2" attributes="0"/>
+                                  <Component id="jtNombre" alignment="0" pref="132" max="32767" attributes="0"/>
+                                  <Component id="jtApellido" pref="132" max="32767" attributes="0"/>
+                                  <Component id="jDateChooser1" alignment="0" max="32767" attributes="0"/>
                               </Group>
-                              <EmptySpace max="32767" attributes="0"/>
+                              <EmptySpace pref="161" max="32767" attributes="0"/>
                           </Group>
                           <Group type="102" attributes="0">
                               <Component id="jtDocumento" min="-2" pref="132" max="-2" attributes="0"/>
@@ -99,12 +99,12 @@
                   <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
                   <Component id="jbEstado" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="1" attributes="0">
+              <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
-                  <Component id="jdFechaNacimiento" min="-2" max="-2" attributes="0"/>
+                  <Component id="jDateChooser1" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="64" max="32767" attributes="0"/>
+              <EmptySpace pref="52" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jbNuevo" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jbEliminar" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -150,8 +150,6 @@
         <Property name="text" type="java.lang.String" value="Fecha de nacimiento"/>
       </Properties>
     </Component>
-    <Component class="com.toedter.calendar.JDateChooser" name="jdFechaNacimiento">
-    </Component>
     <Component class="javax.swing.JRadioButton" name="jbEstado">
     </Component>
     <Component class="javax.swing.JTextField" name="jtNombre">
@@ -184,6 +182,8 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Salir"/>
       </Properties>
+    </Component>
+    <Component class="com.toedter.calendar.JDateChooser" name="jDateChooser1">
     </Component>
   </SubComponents>
 </Form>
