gestionalumnosview agregue EXIT

--- a/T3grupoJavaULP/src/t3grupojavaulp/Vistas/ConsultaAlumnoPorMateriaView.form
+++ b/T3grupoJavaULP/src/t3grupojavaulp/Vistas/ConsultaAlumnoPorMateriaView.form
@@ -128,6 +128,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Salir"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbSalirActionPerformed"/>
+      </Events>
     </Component>
     <Container class="javax.swing.JPanel" name="jPanel1">
 
